--- a/src/sass/layout/hero/_hero.sass
+++ b/src/sass/layout/hero/_hero.sass
@@ -5,17 +5,18 @@
   background-repeat: repeat
   background-size: cover
   background-position: center
-  &__wrapper-title
-    text-align: center
-    img
-      width: 100%
-      max-width: 465px
-      margin: 0 auto
-      margin-bottom: 30px
   &__wrapper-mobile-form
     display: none
     text-align: center
     margin-bottom: 25px
-  .bodymovin
-    width: 316px
-    height: 406px
+
+
+.lottie-hero-1
+  max-width: 500px
+  height: 300px
+  margin: 0 auto
+
+.lottie-hero-2
+  max-width: 700px
+  height: 340px
+  margin: 0 auto
